2013-03-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* src/dvi.c: Correct my mistake to delete RELEASE(q).

2013-03-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Patch from Tsuchimura Nobuyuki <tutimura@nn.iij4u.or.jp> to
	speed up inclusion of eps figures.
	* data/dvipdfmx.cfg, src/dpxfile.[ch], src/dvi.c,
	src/dvicodes.h, src/dvipdfmx.c, src/pdfximage.c, src/vf.c:
	Applied with small modifications to avoid compiler warnings,
	adapted for WIN32 by Akira Kakuto.

2013-03-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* src/dpxfile.c: Change dpx_create_temp_file() because tmpnam()
	sometimes fails on Windows.

2013-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/dpxutil.[ch]: Reduce diffs with xdvipdfmx.
	* src/fontmap.[ch]: Copied from ../xdvipdfmx

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* data/Makefile.am (configdatadir, mapdatadir, cmapdatadir):
	Change texmf => texmf-dist.

2013-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac, src/Makefile.am: Allow subdir-objects.

2013-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reduce dvipdfmx/xdvipdfmx diffs.
	src/Makefile.am: Use AM_CPPFLAGS instead of dvipdfmx_CPPFLAGS.
	src/cid.[ch], src/cid_p.h, src/cid_p.h, src/dvicodes.h,
	src/fontmap.h, src/pdffont.[ch], src/sfnt.[ch], src/t1_load.c,
	src/tt_glyf.c, src/tt_gsub.c: Copied from ../xdvipdfmx.

2013-01-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* read_v2_post_names() in tt_post.c: Change calculation of post->count
	for special fonts with unused index.

2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/cid.c: Avoid casts (const char *) -> (char *).

2013-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid various gcc-4.6 warnings.
	* src/cidtype2.c, src/dvipdfmx.c, src/fontmap.c, src/otl_conf.c,
	src/pdfencoding.c, src/spc_pdfm.c, src/tt_cmap.c: Do not use
	unsafe casts (char **) -> (const char **).
	* src/bmpimage.c, src/cidtype0.c, src/cidtype2.c, src/dvi.c,